--- a/app/templates/tagValues/tagValues.html
+++ b/app/templates/tagValues/tagValues.html
@@ -42,23 +42,49 @@ Tag Values
                 <th>Value</th>
                 <th></th>
                 <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             {% for tagValue in tagValues %}
-            <tr>
-                <td>{{ tagValue.Timestamp }}</td>
-                {% if tagValue.Tag.LookupId %}
-                    <td>{{ tagValue.Tag.Lookup.LookupValues | selectattr("Value", "equalto", tagValue.Value) | map(attribute = "Name") | list | first }}</td>
-                {% else %}
-                    <td>{{ tagValue.Value | string + " " + tagValue.Tag.UnitOfMeasurement.Abbreviation }}</td>
-                {% endif %}
-                <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("tagValues.editTagValue", tagValueId = tagValue.TagValueId) }}">
-                    <span class="glyphicon glyphicon-edit"></span></a></td>
-                <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("tagValues.deleteTagValue", tagValueId = tagValue.TagValueId) }}">
-                    <span class="glyphicon glyphicon-trash"></span></a></td>
-            </tr>
+                <tr>
+                    <td>{{ tagValue.Timestamp }}</td>
+                    {% if tagValue.Tag.LookupId %}
+                        <td>{{ tagValue.Tag.Lookup.LookupValues | selectattr("Value", "equalto", tagValue.Value) | map(attribute = "Name") | list | first }}</td>
+                    {% else %}
+                        <td>{{ tagValue.Value | string + " " + tagValue.Tag.UnitOfMeasurement.Abbreviation }}</td>
+                    {% endif %}
+                    <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Notes"
+                        href = "{{ url_for("tagValues.addTagValueNote", tagValueId = tagValue.TagValueId) }}">
+                        <span class="glyphicon glyphicon-comment"></a></td>
+                    <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("tagValues.editTagValue", tagValueId = tagValue.TagValueId) }}">
+                        <span class="glyphicon glyphicon-edit"></span></a></td>
+                    <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("tagValues.deleteTagValue", tagValueId = tagValue.TagValueId) }}">
+                        <span class="glyphicon glyphicon-trash"></span></a></td>
+                </tr>
+                {% if tagValue.TagValueNotes.count() > 0 %}
+                <tr>
+                    <td class = "invisible"></td>
+                    <th>Note</th>
+                    <th>Timestamp</th>
+                    <td></td>
+                    <td></td>
+                </tr>
+                {% for TagValueNote in tagValue.TagValueNotes %}
+                    <tr>
+                        <td class = "invisible"></td>
+                        <td>{{ TagValueNote.Notes.Note }}</td>
+                        <td>{{ TagValueNote.Notes.Timestamp }}</td>
+                        <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Edit"
+                            href = "{{ url_for("tagValues.editTagValueNote", noteId = TagValueNote.Notes.NoteId) }}">
+                            <span class="glyphicon glyphicon-edit"></span></a></td>
+                        <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Delete"
+                            href = "{{ url_for("tagValues.deleteTagValueNote", tagValueId = tagValue.TagValueId, 
+                            noteId = TagValueNote.Notes.NoteId) }}"><span class="glyphicon glyphicon-trash"></a></td>
+                    </tr>
             {% endfor %}
+        {% endif %}
+    {% endfor %}
         </tbody>
     </table>
 </div>
