--- a/app/templates/elements/elementDashboard.html
+++ b/app/templates/elements/elementDashboard.html
@@ -94,18 +94,18 @@
                             <td></td>
                             <td></td>
                         </tr>
-                        {% for EventFrameNote in firstEventFrame.EventFrameNotes | sort (attribute = "Notes.Timestamp", reverse = True) %}
+                        {% for EventFrameNote in firstEventFrame.EventFrameNotes | sort (attribute = "Note.Timestamp", reverse = True) %}
                             <tr>
                                 <td class = "invisible"></td>
                                 <td class = "invisible"></td>
-                                <td colspan="4">{{ EventFrameNote.Notes.Note }}</td>
-                                <td>{{ EventFrameNote.Notes.Timestamp }}</td>
+                                <td colspan="4">{{ EventFrameNote.Note.Note }}</td>
+                                <td>{{ EventFrameNote.Note.Timestamp }}</td>
                                 <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Edit"
-                                    href = "{{ url_for("eventFrames.editEventFrameNote", noteId = EventFrameNote.Notes.NoteId) }}">
+                                    href = "{{ url_for("eventFrames.editEventFrameNote", noteId = EventFrameNote.Note.NoteId) }}">
                                     <span class="glyphicon glyphicon-edit"></span></a></td>
                                 <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Delete"
                                     href = "{{ url_for("eventFrames.deleteEventFrameNote", eventFrameId = firstEventFrame.EventFrameId, 
-                                    noteId = EventFrameNote.Notes.NoteId) }}"><span class="glyphicon glyphicon-trash"></a></td>
+                                    noteId = EventFrameNote.Note.NoteId) }}"><span class="glyphicon glyphicon-trash"></a></td>
                             </tr>
                         {% endfor %}
                     {% endif %}
@@ -175,18 +175,18 @@
                             <td></td>
                             <td></td>
                         </tr>
-                        {% for TagValueNote in firstTagValue.TagValueNotes | sort (attribute = "Notes.Timestamp", reverse = True) %}
+                        {% for TagValueNote in firstTagValue.TagValueNotes | sort (attribute = "Note.Timestamp", reverse = True) %}
                             <tr>
                                 <td class = "invisible"></td>
                                 <td class = "invisible"></td>
-                                <td colspan="3">{{ TagValueNote.Notes.Note }}</td>
-                                <td>{{ TagValueNote.Notes.Timestamp }}</td>
+                                <td colspan="3">{{ TagValueNote.Note.Note }}</td>
+                                <td>{{ TagValueNote.Note.Timestamp }}</td>
                                 <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Edit"
-                                    href = "{{ url_for("tagValues.editTagValueNote", noteId = TagValueNote.Notes.NoteId) }}">
+                                    href = "{{ url_for("tagValues.editTagValueNote", noteId = TagValueNote.Note.NoteId) }}">
                                     <span class="glyphicon glyphicon-edit"></span></a></td>
                                 <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Delete"
                                     href = "{{ url_for("tagValues.deleteTagValueNote", tagValueId = firstTagValue.TagValueId, 
-                                    noteId = TagValueNote.Notes.NoteId) }}"><span class="glyphicon glyphicon-trash"></a></td>
+                                    noteId = TagValueNote.Note.NoteId) }}"><span class="glyphicon glyphicon-trash"></a></td>
                             </tr>
                         {% endfor %}
                     {% endif %}
